--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+
+    <meta property="og:url" content="https://titenq.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TitenQ | Portfólio">
+    <meta property="og:description" content="Site Portfólio TitenQ">
+    <meta property="og:image" content="https://github.com/titenq/page/blob/master/screenshot.png?raw=true">
+    <meta property="og:site_name" content="TitenQ | Portfólio">
+    <meta property="og:locale" content="pt_BR">
+    
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
